[package]
name = "rust-hyper-http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
wasmer-engine-universal = { version = "=2.3.0" }
wasmer-compiler = { version = "=2.3.0" }
wasmer-compiler-cranelift = { version = "=2.3.0" }
wasmer = { version = "2.3.0", features = ["cranelift"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }